--- a/LIMA/Aula2/index.html
+++ b/LIMA/Aula2/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Aula 2</title>
 	</head>
 	<body>
 		<p>Exemplo <b>Teste</b></p>
@@ -10,6 +11,36 @@
 		<p>Exemplo <del>Teste</del></p>
 		<p>Exemplo <small>Teste</small></p>
 		<p>Exemplo <mark>Teste</mark></p>
-		<img src="1.jpg"/>
+		<img src="1.jpg"/><br/>
+		<a href="https://w3schools.com/">W3Schools</a>
+
+		<ul>
+			<li>Item1</li>
+			<li>Item2</li>
+			<li>Item3</li>
+		</ul>
+	
+		<table border="1">
+			<thead>
+				<tr>
+					<th>Col 1</th>
+					<th>Col 2</th>
+					<th>Col 3</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<tr>
+					<td>L1C1</td>
+					<td>L1C2</td>
+					<td>L1C3</td>
+				</tr>
+				<tr>
+					<td>L2C1</td>
+					<td>L2C2</td>
+					<td>L3C3</td>
+				</tr>
+			</tbody>
+		</table>
 	</body>
 </html>
