--- a/LIMA/Aula2/Tarefa/Pag1.html
+++ b/LIMA/Aula2/Tarefa/Pag1.html
@@ -1,10 +1,21 @@
+<!DOCTYPE html>
 <html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página 1</title>
+</head>
+<body style="background-color: antiquewhite;">
 
-    <head>
-        <title></title>
-    </head>
-    <body>
-        
+    <h1 style="color: burlywood; font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-left: 25px; margin-top: 30px;">AAAAABBBBBCCCCCCC</h1> <br/><br/>
 
-    </body>
+    <center><h3 style="color: burlywood; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+        RECEITAS</h3></center> <br/>
+    <div>
+    <h3 align='left'; style="margin-left: 250px;">Bolo de Cenoura</h3>
+    <h3 align='right'; style="margin-right: 250px;">Pudim</h3>
+    </div>
+
+</body>
 </html>
