--- a/LIMA/Aula3/Ex2.html
+++ b/LIMA/Aula3/Ex2.html
@@ -12,13 +12,13 @@
     <form>
 
         <label>Login</label>
-        <input type="text"> <br/>
+        <input type="text" style="margin-bottom: 5px;"> <br/>
 
         <label>Senha</label>
-        <input type="password"> <br/>
+        <input type="password" style="margin-bottom: 5px;"> <br/>
 
         <label>Status</label>
-        <select style="width: 70px; height: 25px;" name="Status">
+        <select style="width: 70px; height: 25px; margin-bottom: 10px;" name="Status">
             <option value="Ativo">Ativo</option>
             <option value="Inativo">Inativo</option>
         </select> <br/>
@@ -29,20 +29,20 @@
         <input type="radio" name="Tipo" value="Aluno">Aluno <br/>
 
         <label>Data Criação</label>
-        <input type="date"> <br/>
+        <input type="date" style="margin-bottom: 10px; margin-top: 10px;"> <br/>
 
         <labrel>Perfil</labrel>
         <input type="radio" name="Perfil" value="Convidado">Convidado
-        <input type="radio" name="Perfil" value="Administrador">Administrador <br/>
+        <input type="radio" name="Perfil" value="Administrador">Administrador <br/><br/>
 
         <label>Observações</label>
-        <textarea style="height: 150px; overflow-y: scroll; width: 150px;"></textarea> <br/>
+        <textarea style="height: 150px; overflow-y: scroll; width: 150px;"></textarea> <br/><br/>
 
         <label>Módulos</label>
         <input type="checkbox" name="Módulos" value="Compras">Compras
         <input type="checkbox" name="Módulos" value="Biblioteca">Biblioteca
         <input type="checkbox" name="Módulos" value="Académico">Académico <br/>
-        <input type="checkbox" name="Módulos" value="Documentação">Documentação
+        <input type="checkbox" name="Módulos" value="Documentação" style="margin-left: 65px;">Documentação
         <input type="checkbox" name="Módulos" value="Recursos Humanos">Recursos Humanos
 
         <br/>
