--- a/LIMA/Aula2/Tarefa/Primeira.html
+++ b/LIMA/Aula2/Tarefa/Primeira.html
@@ -14,6 +14,9 @@
         <div style="display: inline-block; vertical-align: 45px;">
             <a href="#receitas" style="color: #BC8F8F; text-decoration: none;"><h4>Receitas</h4></a>
         </div>
+        <div style="display: inline-block; vertical-align: 45px;">
+            <a href="#suareceita" style="color: #BC8F8F; text-decoration: none; margin-left: 170px;"><h4>Envie sua Receita</h4></a>
+        </div>
     </center>
 
     <center>
@@ -43,6 +46,21 @@
             <a href="file:///C:/Users/carlo/OneDrive/Documentos/Senai/SENAI-2023/LIMA/Aula2/Tarefa/Terceira.html" style="text-decoration: none; color: #BC8F8F;">
                 <h4>Veja a Receita Completa</h4></a>
         </div>
+    </center>
+
+
+    <center>
+
+        <div id="suareceita">
+            <h2 style="color: #BC8F8F; margin-top: 100px;">Envie sua receita para nós</h2>
+            <form>
+
+                <textarea style="width: 500px; height: 250px; overflow-y: scroll;">Digite o nome, os ingredientes e o modo de preparo da receita</textarea><br/>
+                <input type="submit" value="Enviar" style="background-color: white; margin-bottom: 100px;">
+
+            </form>
+        </div>
+
     </center>
 
 </body>
