--- a/LIMA/Aula2/Tarefa/Terceira.html
+++ b/LIMA/Aula2/Tarefa/Terceira.html
@@ -14,6 +14,9 @@
         <div style="display: inline-block; vertical-align: 45px;">
             <a href="file:///C:/Users/carlo/OneDrive/Documentos/Senai/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#receitas" style="color: #BC8F8F; text-decoration: none;"><h4>Receitas</h4></a>
         </div>
+        <div style="display: inline-block; vertical-align: 45px;">
+            <a href="file:///C:/Users/carlo/OneDrive/Documentos/Senai/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#suareceita" style="color: #BC8F8F; text-decoration: none; margin-left: 170px;"><h4>Envie sua Receita</h4></a>
+        </div>
     </center>
 
     <div style="display: inline-block;">
