--- a/LIMA/Aula2/Tarefa/Primeira.html
+++ b/LIMA/Aula2/Tarefa/Primeira.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faça Você</title>
 </head>
-<body style="background-color: #FFFAF0;">
+<body style="background-color: #FFFAF0; font-family: cursive">
     
     <center>
         <div style="display: inline-block; margin: 20px;">
@@ -18,14 +18,14 @@
             <a href="#suareceita" style="color: #BC8F8F; text-decoration: none; margin-left: 170px;"><h4>Envie sua Receita</h4></a>
         </div>
     </center>
-
+        <br/>
     <center>
         <div id="receitas"> <br/><br/>
-            <h3 style="color: #BC8F8F;">Adicionadas Recentemente</h3>
+            <h3 style="color: #BC8F8F;">Receitas Disponíveis</h3>
         </div>
         
         <div style="display: inline-block; margin-right: 335px;">
-            <h3 style="color: #DEB887">&nbsp;Bolo de Cenoura&nbsp;</h3>
+            <h3 style="color: #DEB887">Bolo de Cenoura</h3>
         </div>
         <div style="display: inline-block;">
             <h3 style="color: #DEB887;">Pudim de<br/>Leite Condensado</h3>
@@ -38,7 +38,7 @@
             <img src="Pudim.jpg" style="max-height: 275px; margin-left: 100px;"/>
         </div> <br/>
 
-        <div style="display: inline-block; margin-right: 310px;">
+        <div style="display: inline-block; margin-right: 285px;">
             <a href="file:///C:/Users/carlo/OneDrive/Documentos/Senai/SENAI-2023/LIMA/Aula2/Tarefa/Segunda.html" style="text-decoration: none; color: #BC8F8F;">
             <h4>Veja a Receita Completa</h4></a>
         </div>
