--- a/LIMA/Aula2/Tarefa/Segunda.html
+++ b/LIMA/Aula2/Tarefa/Segunda.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faça Você - Bolo de Cenoura</title>
 </head>
-<body style="background-color: #FFFAF0;">
+<body style="background-color: #FFFAF0; font-family: cursive;">
 
     <center>
         <div style="display: inline-block; margin: 20px">
@@ -20,7 +20,7 @@
     </center>
 
     <div style="display: inline-block;">
-        <img src="BolodeCenoura.jpg" style="max-height: 275px; margin-left: 100px; vertical-align: 230px;"/>
+        <img src="BolodeCenoura.jpg" style="max-height: 275px; margin-left: 100px; vertical-align: 300px;"/>
     </div>
     <div style="display: inline-block;">
         <h1 style="color: #BC8F8F; margin-left: 150px;">Ingredientes</h1>
@@ -31,7 +31,7 @@
             <li style="margin-bottom: 10px;">1/2 xícara de óleo</li>
             <li style="margin-bottom: 10px;">2 xícaras de trigo</li>
             <li style="margin-bottom: 10px;">3 ovos</li>
-            <li style="margin-bottom: 10px;">1 colher (chá) de fermento em pó</li>
+            <li style="margin-bottom: 10px;">1 colher de chá de fermento em pó</li>
             <li style="margin-bottom: 10px;">1 xícara de açúcar</li>
         </ul> <br/>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Cobertura de Chocolate</h3>
@@ -43,7 +43,7 @@
         </ul>
     </div>
 
-    <div style="display: inline-block; vertical-align: 95px;">
+    <div style="display: inline-block; vertical-align: 105px;">
         <h1 style="color: #BC8F8F; margin-left: 150px;">Modo de Preparo</h1>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Massa</h3>
         <ol style="margin-left: 125px; color: #A0522D; font-size: 20px;">
