--- a/LIMA/Aula2/Tarefa/Terceira.html
+++ b/LIMA/Aula2/Tarefa/Terceira.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faça Você - Pudim de Leite Condensado</title>
 </head>
-<body style="background-color: #FFFAF0;">
+<body style="background-color: #FFFAF0; font-family: cursive;">
     
     <center>
         <div style="display: inline-block; margin: 20px;">
@@ -20,16 +20,16 @@
     </center>
 
     <div style="display: inline-block;">
-        <img src="Pudim.jpg" style="max-height: 275px; margin-left: 100px; vertical-align: 255px;"/>
+        <img src="Pudim.jpg" style="max-height: 275px; margin-left: 100px; vertical-align: 365px;"/>
     </div>
-    <div style="display: inline-block; vertical-align: 165px;">
+    <div style="display: inline-block; vertical-align: 230px;">
         <h1 style="color: #BC8F8F; margin-left: 150px;">Ingredientes</h1>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Pudim de Leite Condensado</h3>
 
         <ul style="margin-left: 125px; color: #A0522D; font-size: 20px;">
             <li style="margin-bottom: 10px;">1 lata de leite condensado</li>
             <li style="margin-bottom: 10px;">3 ovos inteiros</li>
-            <li style="margin-bottom: 10px;">1 lata de leite(medida da lata de leite<br>condensado)</li>
+            <li style="margin-bottom: 10px;">1 lata de leite(medida da lata de<br>leite condensado)</li>
         </ul> <br/>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Calda</h3>
         <ul style="margin-left: 125px; color: #A0522D; font-size: 20px;">
@@ -38,7 +38,7 @@
         </ul>
     </div>
 
-    <div style="display: inline-block; vertical-align: 62px;">
+    <div style="display: inline-block; vertical-align: 107px;">
         <h1 style="color: #BC8F8F; margin-left: 150px;">Modo de Preparo</h1>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Massa</h3>
         <ol style="margin-left: 125px; color: #A0522D; font-size: 20px;">
