--- a/LIMA/Aula2/Tarefa/Sala de Aula/Segunda.html
+++ b/LIMA/Aula2/Tarefa/Sala de Aula/Segunda.html
@@ -12,16 +12,19 @@
             <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html"><img src="logo.jpg" style="height: 120px;"></a>
         </div>
         <div style="display: inline-block; vertical-align: 45px;">
-            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#receitas" style="color: #BC8F8F; text-decoration: none;"><h4>Receitas</h4></a>
+            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#receitas" style="color: #BC8F8F; text-decoration: none;">
+                <h4>Receitas</h4></a>
         </div>
         <div style="display: inline-block; vertical-align: 45px;">
-            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#suareceita" style="color: #BC8F8F; text-decoration: none; margin-left: 170px;"><h4>Envie sua Receita</h4></a>
+            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#suareceita" style="color: #BC8F8F; text-decoration: none; margin-left: 170px;">
+                <h4>Envie sua Receita</h4></a>
         </div>
     </center>
 
     <div style="display: inline-block;">
-        <img src="BolodeCenoura.jpg" style="max-height: 275px; margin-left: 100px; vertical-align: 300px;"/>
+        <img src="BolodeCenoura.jpg" style="max-height: 275px; margin-left: 100px; vertical-align: 800px;"/>
     </div>
+
     <div style="display: inline-block;">
         <h1 style="color: #BC8F8F; margin-left: 150px;">Ingredientes</h1>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Bolo de Cenoura</h3>
@@ -33,31 +36,30 @@
             <li style="margin-bottom: 10px;">3 ovos</li>
             <li style="margin-bottom: 10px;">1 colher de chá de fermento em pó</li>
             <li style="margin-bottom: 10px;">1 xícara de açúcar</li>
-        </ul> <br/>
+        </ul>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Cobertura de Chocolate</h3>
         <ul style="margin-left: 125px; color: #A0522D; font-size: 20px;">
             <li style="margin-bottom: 10px;">1 colher de margarina</li>
             <li style="margin-bottom: 10px;">3 colheres de chocolate em pó</li>
             <li style="margin-bottom: 10px;">1/2 lata de leite condensado</li>
             <li style="margin-bottom: 10px;">1 xícara de leite</li>
-        </ul>
-    </div>
-
-    <div style="display: inline-block; vertical-align: 105px;">
+        </ul> <br/>
         <h1 style="color: #BC8F8F; margin-left: 150px;">Modo de Preparo</h1>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Massa</h3>
         <ol style="margin-left: 125px; color: #A0522D; font-size: 20px;">
-            <li style="margin-bottom: 10px;">Coloque no liquidificador a cenoura descascada e picada,<br/>os ovos inteiros e o óleo, bata até formar um creme.</li>
+            <li style="margin-bottom: 10px;">Coloque no liquidificador a cenoura descascada e picada,<br/>
+                os ovos inteiros e o óleo, bata até formar um creme.</li>
             <li style="margin-bottom: 10px;">Em uma vasilha separada, coloque o trigo e o açúcar.</li>
             <li style="margin-bottom: 10px;">Junte o creme do liquidificador e bata por alguns minutos.</li>
             <li style="margin-bottom: 10px;">Para finalizar, coloque o fermento em pó e mexa bem.</li>
-            <li style="margin-bottom: 25px;">Coloque para assar em forno médio, preaquecido,<br/>por aproximadamente 40 minutos, ou até dourar.</li>
+            <li style="margin-bottom: 25px;">Coloque para assar em forno médio, preaquecido,<br/>
+                por aproximadamente 40 minutos, ou até dourar.</li>
         </ol>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Cobertura</h3>
         <ol style="margin-left: 125px; color: #A0522D; font-size: 20px;">
-            <li>Coloque todos os Ingredientes em uma panela e mexa até<br/>engrossar.</li>
+            <li style="margin-bottom: 250px;">Coloque todos os Ingredientes em uma panela e mexa até<br/>engrossar.</li>
         </ol>
     </div>
-    
+
 </body>
 </html>
