--- a/LIMA/Aula2/Tarefa/Sala de Aula/Terceira.html
+++ b/LIMA/Aula2/Tarefa/Sala de Aula/Terceira.html
@@ -12,16 +12,19 @@
             <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html"><img src="logo.jpg" style="height: 120px;"></a>
         </div>
         <div style="display: inline-block; vertical-align: 45px;">
-            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#receitas" style="color: #BC8F8F; text-decoration: none;"><h4>Receitas</h4></a>
+            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#receitas" style="color: #BC8F8F; text-decoration: none;">
+                <h4>Receitas</h4></a>
         </div>
         <div style="display: inline-block; vertical-align: 45px;">
-            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#suareceita" style="color: #BC8F8F; text-decoration: none; margin-left: 170px;"><h4>Envie sua Receita</h4></a>
+            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#suareceita" style="color: #BC8F8F; text-decoration: none; margin-left: 170px;">
+                <h4>Envie sua Receita</h4></a>
         </div>
     </center>
 
     <div style="display: inline-block;">
-        <img src="Pudim.jpg" style="max-height: 275px; margin-left: 100px; vertical-align: 365px;"/>
+        <img src="Pudim.jpg" style="max-height: 275px; margin-left: 100px; vertical-align: 925px;"/>
     </div>
+
     <div style="display: inline-block; vertical-align: 230px;">
         <h1 style="color: #BC8F8F; margin-left: 150px;">Ingredientes</h1>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Pudim de Leite Condensado</h3>
@@ -30,22 +33,21 @@
             <li style="margin-bottom: 10px;">1 lata de leite condensado</li>
             <li style="margin-bottom: 10px;">3 ovos inteiros</li>
             <li style="margin-bottom: 10px;">1 lata de leite(medida da lata de<br>leite condensado)</li>
-        </ul> <br/>
+        </ul>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Calda</h3>
         <ul style="margin-left: 125px; color: #A0522D; font-size: 20px;">
             <li style="margin-bottom: 10px;">1 xícara (chá) de açúcar</li>
             <li style="margin-bottom: 10px;">1/2 xícara de água</li>
-        </ul>
-    </div>
-
-    <div style="display: inline-block; vertical-align: 107px;">
+        </ul> <br/>
         <h1 style="color: #BC8F8F; margin-left: 150px;">Modo de Preparo</h1>
         <h3 style="color: #BC8F8F; margin-left: 150px;">Massa</h3>
         <ol style="margin-left: 125px; color: #A0522D; font-size: 20px;">
             <li style="margin-bottom: 10px;">Bata bem os ovos no liquidificador.</li>
             <li style="margin-bottom: 10px;">Acrescente o leite condensado e o leite,<br/>e bata novamente.</li>
-            <li style="margin-bottom: 10px;">Em uma forma redonda, já com a calda,<br/>despeje a massa do pudim.</li>
-            <li style="margin-bottom: 10px;">Asse em forno médio por 45 minutos,<br/>com a assadeira redonda dentro de uma maior com água.</li>
+            <li style="margin-bottom: 10px;">Em uma forma redonda, já com a calda,<br/>
+                despeje a massa do pudim.</li>
+            <li style="margin-bottom: 10px;">Asse em forno médio por 45 minutos,<br/>
+                com a assadeira redonda dentro de uma maior com água.</li>
             <li style="margin-bottom: 10px;">Espete um garfo para ver se está bem assado.</li>
             <li style="margin-bottom: 25px;">Deixe esfriar e desenforme.</li>
         </ol>
@@ -53,9 +55,6 @@
         <ol style="margin-left: 125px; color: #A0522D; font-size: 20px;">
             <li>Derreta o açúcar na panela até ficar moreno,<br/>acrescente água e deixe engrossar.</li>
         </ol>
-    </div>
-    
-
     </div>
 
 </body>
