--- a/LIMA/Aula2/Tarefa/Segunda.html
+++ b/LIMA/Aula2/Tarefa/Segunda.html
@@ -9,14 +9,14 @@
 
     <center>
         <div style="display: inline-block; margin: 20px">
-            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Sala%20de%20Aula/Primeira.html"><img src="logo.jpg" style="height: 120px;"></a>
+            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html"><img src="logo.jpg" style="height: 120px;"></a>
         </div>
         <div style="display: inline-block; vertical-align: 45px;">
-            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Sala%20de%20Aula/Primeira.html#receitas" style="color: #BC8F8F; text-decoration: none;">
+            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#receitas" style="color: #BC8F8F; text-decoration: none;">
                 <h4>Receitas</h4></a>
         </div>
         <div style="display: inline-block; vertical-align: 45px;">
-            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Sala%20de%20Aula/Primeira.html#suareceita" style="color: #BC8F8F; text-decoration: none; margin-left: 170px;">
+            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#suareceita" style="color: #BC8F8F; text-decoration: none; margin-left: 170px;">
                 <h4>Envie sua Receita</h4></a>
         </div>
     </center>
