--- a/LIMA/Aula2/Tarefa/Primeira.html
+++ b/LIMA/Aula2/Tarefa/Primeira.html
@@ -9,7 +9,7 @@
     
     <center>
         <div style="display: inline-block; margin: 20px;">
-            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Sala%20de%20Aula/Primeira.html"><img src="logo.jpg" style="height: 120px;"></a>
+            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html"><img src="logo.jpg" style="height: 120px;"></a>
         </div>
         <div style="display: inline-block; vertical-align: 45px;">
             <a href="#receitas" style="color: #BC8F8F; text-decoration: none;"><h4>Receitas</h4></a>
@@ -39,11 +39,11 @@
         </div> <br/>
 
         <div style="display: inline-block; margin-right: 285px;">
-            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Sala%20de%20Aula/Segunda.html" style="text-decoration: none; color: #BC8F8F;">
+            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Segunda.html" style="text-decoration: none; color: #BC8F8F;">
             <h4>Veja a Receita Completa</h4></a>
         </div>
         <div style="display: inline-block;">
-            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Sala%20de%20Aula/Terceira.html" style="text-decoration: none; color: #BC8F8F;">
+            <a href="file:///C:/SENAI-2023/LIMA/Aula2/Tarefa/Terceira.html" style="text-decoration: none; color: #BC8F8F;">
                 <h4>Veja a Receita Completa</h4></a>
         </div>
     </center>
