--- a/LIMA/Aula2/Tarefa/Terceira.html
+++ b/LIMA/Aula2/Tarefa/Terceira.html
@@ -9,10 +9,10 @@
     
     <center>
         <div style="display: inline-block; margin: 20px;">
-            <a href="file:///C:/Users/carlo/OneDrive/Documentos/Senai/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html"><img src="logo.jpg" style="height: 120px;"></a>
+            <a href="file:///E:/Carlos/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html"><img src="logo.jpg" style="height: 120px;"></a>
         </div>
         <div style="display: inline-block; vertical-align: 45px;">
-            <a href="file:///C:/Users/carlo/OneDrive/Documentos/Senai/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#receitas" style="color: #BC8F8F; text-decoration: none;"><h4>Receitas</h4></a>
+            <a href="file:///E:/Carlos/SENAI-2023/LIMA/Aula2/Tarefa/Primeira.html#receitas" style="color: #BC8F8F; text-decoration: none;"><h4>Receitas</h4></a>
         </div>
     </center>
 
