--- a/LIMA/Lista1/Exercicio2/exercicio2.html
+++ b/LIMA/Lista1/Exercicio2/exercicio2.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 2</title>
-    <link rel="stylesheet" href="exercicio2.css">
+    <link rel="stylesheet" href="./exercicio2.css">
 </head>
 <body>
     
+    <main>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th class="curso">Curso</th>
+                    <th>Turma</th>
+                    <th>Contato</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr class="linha1">
+                    <td>Fulano</td>
+                    <td class="curso">Desenvolvimento de Sistemas</td>
+                    <td>1 semestre</td>
+                    <td>(19) 1234-4321</td>
+                </tr>
+                <tr class="linha2">
+                    <td>Ciclano</td>
+                    <td class="curso">Eletronica</td>
+                    <td>2 semestre</td>
+                    <td>(19) 4567-7890</td>
+                </tr>
+                <tr>
+                    <td>Beltrano</td>
+                    <td class="curso">Mecatronica</td>
+                    <td>1 semestre</td>
+                    <td>(19) 7890-1234</td>
+                </tr>
+            </tbody>
+        </table>
+
+    </main>
+
+
 </body>
 </html>
