--- a/LIMA/Lista1/Exercicio4/exercicio4.html
+++ b/LIMA/Lista1/Exercicio4/exercicio4.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 4</title>
-    <link rel="stylesheet" href="exercicio4.css">
+    <link rel="stylesheet" href="./exercicio4.css">
 </head>
 <body>
 
+    <main>
         <div class="container">
             <div class="red"></div>
             <div class="green"></div>
             <div class="blue"></div>
         </div>
-    
+    </main>
 </body>
 </html>
