--- a/LIMA/Lista1/Exercicio9/exercicio9.html
+++ b/LIMA/Lista1/Exercicio9/exercicio9.html
@@ -8,11 +8,43 @@
 </head>
 <body>
     
-    <header></header>
+    <header>
 
-    <main></main>
+        <div class="opshead">
 
-    <footer></footer>
+            <div class="opshead1">
+                <img src="./assets/img/apple.png">
+                <h3>Filder</h3>
+                <p>File</p>
+                <p>Edit</p>
+                <p>View</p>
+                <p>Go</p>
+            </div>
+
+            <div class="opshead2">
+                <p>29/06/2021 09:27</p>
+            </div>
+
+        </div>
+
+    </header>
+
+    <main>
+
+        <div class="app">
+
+            <div class="app1">
+                <img src="./assets/img/chrome.png">
+                <img src="./assets/img/paint.png">
+                <img src="./assets/img/vs.png">
+                <img src="./assets/img/appleStore.png">
+                <img src="./assets/img/word.png">
+                <img src="./assets/img/faceTime.png">
+            </div>
+
+        </div>
+
+    </main>
     
 </body>
 </html>
