--- a/LIMA/Aula7/index.html
+++ b/LIMA/Aula7/index.html
@@ -11,57 +11,78 @@
 
     <header>
 
-        <div class="logo"><p>LOGO</p></div>
+        <div class="logo">
+            <img src="./assets/img/logo.png">
+        </div>
         <input class="buscar" type="search" placeholder="Buscar">
         <div class="conta">
             <a href="#">Entrar</a>/<a href="#">Cadastrar</a>
         </div>
-        <img class="carrinho" src="./assets/img/carrinho.png">
+
+        <a href="#">
+            <img class="carrinho" src="./assets/img/carrinho.png">
+        </a>
 
     </header>
 
     <nav class="nav-1">
 
-        <a href="#"><p>Categoria 1</p></a>
-        <a href="#"><p>Categoria 2</p></a>
-        <a href="#"><p>Categoria 3</p></a>
-        <a href="#"><p>Categoria 4</p></a>
+        <a href="#"><p>Consoles</p></a>
+        <a href="#"><p>Jogos</p></a>
+        <a href="#"><p>Acessórios</p></a>
 
     </nav>
 
     <nav class="nav-2">
 
-        <a href="#"><p>Filtro 1</p></a>
-        <a href="#"><p>Filtro 2</p></a>
-        <a href="#"><p>Filtro 3</p></a>
-        <a href="#"><p>Filtro 4</p></a>
+        <a href="#"><p>Jogos PS4</p></a>
+        <a href="#"><p>Jogos PS5</p></a>
 
     </nav>
 
     <main>
 
         <div class="item-1">
-            <p>Nome do Produto<br>Valor do Produto</p>
+            <a href="#">
+                <img src="./assets/img/TheLastOfUsIIPS4.jpg">
+                <p>The Last Of Us Part II - PS4<br>R$ 149,99</p>
+            </a>
         </div>
         <div class="item-2">
-            <p>Nome do Produto<br>Valor do Produto</p>
+            <a href="#">
+                <img src="./assets/img/SpiderMan2PS5.jpg" alt="">
+                <p>Spider Man 2<br>R$ 315,00 (Pré-Venda)</p>
+            </a>
         </div>
         <div class="item-3">
-            <p>Nome do Produto<br>Valor do Produto</p>
+            <a href="#">
+                <img src="./assets/img/DemonsSoulsPS5.jpg">
+                <p>Demon's Soul's - PS5<br>R$ 299,99</p>
+            </a>
         </div>
         <div class="item-1">
-            <p>Nome do Produto<br>Valor do Produto</p>
+            <a href="#">
+                <img src="./assets/img/HorizonForbiddenWestPS5.jpg">
+                <p>Horizon Forbidden West - PS5<br>R$ 264,99</p>
+            </a>
         </div>
         <div class="item-2">
-            <p>Nome do Produto<br>Valor do Produto</p>
-        </div>
-        <div class="item-3">
-            <p>Nome do Produto<br>Valor do Produto</p>
+            <a href="#">
+                <img src="./assets/img/GodOfWarPS5.jpg">
+                <p>God Of War Ragnarok - PS5<br>274,99</p>
+            </a>
         </div>
 
     </main>
 
-    <footer></footer>
+    <footer>
+
+        <a href="#"><p>Contato</p></a>
+        <a href="#"><p>Ajuda</p></a>
+        <a href="#"><p>Quem Somos</p></a>
+        <a href="#"><p>Devoluções</p></a>
+
+    </footer>
     
 </body>
 </html>
