--- a/LIMA/Aula7/index.html
+++ b/LIMA/Aula7/index.html
@@ -45,7 +45,7 @@
         <div class="item-1">
             <a href="#">
                 <img src="./assets/img/TheLastOfUsIIPS4.jpg">
-                <p>The Last Of Us Part II - PS4<br>R$ 149,99</p>
+                <p>The Last Of Us II - PS4<br>R$ 149,99</p>
             </a>
         </div>
         <div class="item-2">
