--- a/LIMA/Aula10/ListaExercícios/index.html
+++ b/LIMA/Aula10/ListaExercícios/index.html
@@ -23,7 +23,7 @@
       <input type="number" id="vel" />
       <label>Distânca percorrida (km)</label>
       <input type="number" id="dis" />
-      <input class="button" type="submit" onclick="calcularTempo()" />
+      <button onclick="calcularTempo()">Calcular</button>
       <label id="text1"></label>
       <h3 id="resultado1"></h3>
     </div>
@@ -42,7 +42,7 @@
       <input type="number" id="salario" />
       <label>% de Aumento</label>
       <input type="number" id="aumento" />
-      <input class="button" type="submit" onclick="calcularSalario()" />
+      <button onclick="calcularSalario()">Calcular</button>
       <label id="text2"></label>
       <h3 id="resultado2"></h3>
     </div>
