--- a/LIMA/Aula10/ListaExercícios/index.html
+++ b/LIMA/Aula10/ListaExercícios/index.html
@@ -14,6 +14,23 @@
     <div class="ex1">
       <h2>Exercício 1</h2>
       <p>
+        Desenvolva um programa que leia três variáveis (a, b, c) e resolva a expressão: ( a + b ) / c
+      </p>
+
+      <label>Valor de A</label>
+      <input type="number" id="a" />
+      <label>Valor de B</label>
+      <input type="number" id="b" />
+      <label>Valor de C</label>
+      <input type="number" id="c" />
+      <button onclick="operacao()">Calcular Operação</button>
+      <h3 id="result1"></h3>
+    </div>
+    
+    <!-- Exercício 2 -->
+    <div class="ex2">
+      <h2>Exercício 2</h2>
+      <p>
         Desenvolva um programa que leia a velocidade de um carro (km/h) e a
         distância a ser percorrida (km) por ele. Calcule e apresente na tela,
         quanto tempo (horas) será necessário para o carro percorrer a distância
@@ -21,16 +38,16 @@
       </p>
 
       <label>Velocida do carro (km/h)</label>
-      <input type="number" id="velex1" />
+      <input type="number" id="velex2" />
       <label>Distânca percorrida (km)</label>
-      <input type="number" id="disex1" />
+      <input type="number" id="disex2" />
       <button onclick="calcularTempo()">Calcular Tempo</button>
-      <h3 id="result1"></h3>
+      <h3 id="result2"></h3>
     </div>
 
-    <!-- Exerício 2 -->
-    <div class="ex2">
-      <h2>Exercício 2</h2>
+    <!-- Exerício 3 -->
+    <div class="ex3">
+      <h2>Exercício 3</h2>
       <p>
         Desenvolva um programa que leia o nome e o salário de uma pessoa, depois
         leia o valor do índice percentual (%) de reajuste do salário. Calcule e
@@ -44,13 +61,13 @@
       <label>% de Aumento</label>
       <input type="number" id="aumento" />
       <button onclick="calcularSalario()">Calcular Salário</button>
-      <h3 id="text2"></h3>
-      <h3 id="result2"></h3>
+      <h3 id="text3"></h3>
+      <h3 id="result3"></h3>
     </div>
 
-    <!-- Exercício 3 -->
-    <div class="ex3">
-      <h2>Exercício 3</h2>
+    <!-- Exercício 4 -->
+    <div class="ex4">
+      <h2>Exercício 4</h2>
       <p>
         Desenvolva um programa que leia o nome de um time de futebol, o número de vitórias e o 
         número de empates. O programa deverá calcular e apresentar na tela, o nome do time e o total 
@@ -64,13 +81,13 @@
       <label>Número de Empates</label>
       <input type="number" id="emp" />
       <button onclick="calcularPontos()">Calcular Pontos</button>
-      <h3 id="text3"></h3>
-      <h3 id="result3"></h3>
+      <h3 id="text4"></h3>
+      <h3 id="result4"></h3>
     </div>
 
-    <!-- Exercício 4-->
-    <div class="ex4">
-      <h2>Exercício 4</h2>
+    <!-- Exercício 5-->
+    <div class="ex5">
+      <h2>Exercício 5</h2>
       <p>
         Desenvolva um programa que leia um número ”n” inteiro, positivo e 
         diferente de zero e apresente na tela: n – 1, e também n + 1.
@@ -79,13 +96,13 @@
       <label>Digite Um número Inteiro</label>
       <input type="number" id="num" />
       <button onclick="calcularOperacao()">Calcular Operação</button>
-      <h3 id="result4"></h3>
-      <h3 id="result4-1"></h3>
+      <h3 id="result5"></h3>
+      <h3 id="result5-1"></h3>
     </div>
 
-    <!-- Exercício 5 -->
-    <div class="ex5">
-      <h2>Exercício 5</h2>
+    <!-- Exercício 6 -->
+    <div class="ex6">
+      <h2>Exercício 6</h2>
       <p>
         Sabendo-se que a velocidade de cruzeiro de um avião 747-300 é de 900 km/h, 
         faça um programa que leia uma distância (km), calcule e apresente na tela, 
@@ -93,14 +110,14 @@
       </p>
 
       <label>Distância (km)</label>
-      <input type="number" id="disex5">
+      <input type="number" id="disex6">
       <button onclick="calcularTempoAviao()">Calcular Tempo</button>
-      <h3 id="result5"></h3>
+      <h3 id="result6"></h3>
     </div>
 
-    <!-- Exercício 6 -->
-    <div class="ex6">
-      <h2>Exercício 6</h2>
+    <!-- Exercício 7 -->
+    <div class="ex7">
+      <h2>Exercício 7</h2>
       <p>
         Um caminhão consegue transportar 18 toneladas de laranjas em uma viagem que faz entre a fazenda
         e a fábrica de suco de laranja. Um alqueire de terra produz em média 250 toneladas de laranjas.
@@ -113,12 +130,12 @@
       <label>Alqueires</label>
       <input type="number" id="qtdAlq">
       <button onclick="calcularViagens()">Calcular Viagens</button>
-      <h3 id="result6"></h3>
+      <h3 id="result7"></h3>
     </div>
 
-    <!-- Exercício 7 -->
-    <div class="ex7">
-      <h2>Exercício 7</h2>
+    <!-- Exercício 8 -->
+    <div class="ex8">
+      <h2>Exercício 8</h2>
       <p>
         Desenvolva um programa que leia o raio (cm) e a altura (cm) de um cilindro.
         Calcule e mostre a área (cm2) e o volume (cm3) do cilindro.
@@ -129,15 +146,15 @@
       <label>Altura (cm)</label>
       <input type="number" id="altura">
       <button onclick="calcularRV()"">Calcular Área e Volume</button>
-      <h3 id="result7AreaB"></h3>
-      <h3 id="result7AreaL"></h3>
-      <h3 id="result7AreaT"></h3>
-      <h3 id="result7Volume"></h3>
+      <h3 id="result8AreaB"></h3>
+      <h3 id="result8AreaL"></h3>
+      <h3 id="result8AreaT"></h3>
+      <h3 id="result8Volume"></h3>
     </div>
 
-    <!-- Exercício 8 -->
-    <div class="ex8">
-      <h2>Exercício 8</h2>
+    <!-- Exercício 9 -->
+    <div class="ex9">
+      <h2>Exercício 9</h2>
       <p>
         Desenvolva um programa que leia o nome e o preço de uma mercadoria. O programa deverá
         calcular um aumento de 5% no preço da mercadoria e mostrar o nome da mercadoria e o seu novo preço.
@@ -153,9 +170,9 @@
       <h3 id="novoPreco"></h3>
     </div>
 
-    <!-- Exercício 9 -->
-    <div class="ex9">
-      <h2>Exercício 9</h2>
+    <!-- Exercício 10 -->
+    <div class="ex10">
+      <h2>Exercício 10</h2>
       <p>
         Desenvolva um programa que leia o nome de uma cidade, o número total de eleitores e o
         número total de votos apurados na última eleição. O programa deverá calcular e exibir
