--- a/LIMA/Aula10/ListaExercícios/index.html
+++ b/LIMA/Aula10/ListaExercícios/index.html
@@ -19,11 +19,11 @@
         quanto tempo (horas) será necessário para o carro percorrer a distância
         informada.
       </p>
-
+      
       <label>Velocida do carro (km/h)</label>
-      <input type="number" id="velex1" />
+      <input type="number" id="velex1" required/>
       <label>Distânca percorrida (km)</label>
-      <input type="number" id="disex1" />
+      <input type="number" id="disex1" required/>
       <button onclick="calcularTempo()">Calcular Tempo</button>
       <h3 id="result1"></h3>
     </div>
