--- a/LIMA/Aula10/ListaExercícios/index.html
+++ b/LIMA/Aula10/ListaExercícios/index.html
@@ -11,7 +11,7 @@
     <br />
 
     <!-- Exercício 1 -->
-    <div class="ex1">
+    <div>
       <h2>Exercício 1</h2>
       <p>
         Desenvolva um programa que leia três variáveis (a, b, c) e resolva a expressão: ( a + b ) / c
@@ -28,7 +28,7 @@
     </div>
     
     <!-- Exercício 2 -->
-    <div class="ex2">
+    <div>
       <h2>Exercício 2</h2>
       <p>
         Desenvolva um programa que leia a velocidade de um carro (km/h) e a
@@ -38,21 +38,18 @@
       </p>
       
       <label>Velocida do carro (km/h)</label>
-<<<<<<< HEAD
       <input type="number" id="velex1" required/>
       <label>Distânca percorrida (km)</label>
       <input type="number" id="disex1" required/>
-=======
       <input type="number" id="velex2" />
       <label>Distânca percorrida (km)</label>
       <input type="number" id="disex2" />
->>>>>>> 03e4df6977070228bc7da10af56e3d8960ed0964
       <button onclick="calcularTempo()">Calcular Tempo</button>
       <h3 id="result2"></h3>
     </div>
 
     <!-- Exerício 3 -->
-    <div class="ex3">
+    <div>
       <h2>Exercício 3</h2>
       <p>
         Desenvolva um programa que leia o nome e o salário de uma pessoa, depois
@@ -72,7 +69,7 @@
     </div>
 
     <!-- Exercício 4 -->
-    <div class="ex4">
+    <div>
       <h2>Exercício 4</h2>
       <p>
         Desenvolva um programa que leia o nome de um time de futebol, o número de vitórias e o 
@@ -92,7 +89,7 @@
     </div>
 
     <!-- Exercício 5-->
-    <div class="ex5">
+    <div>
       <h2>Exercício 5</h2>
       <p>
         Desenvolva um programa que leia um número ”n” inteiro, positivo e 
@@ -107,7 +104,7 @@
     </div>
 
     <!-- Exercício 6 -->
-    <div class="ex6">
+    <div>
       <h2>Exercício 6</h2>
       <p>
         Sabendo-se que a velocidade de cruzeiro de um avião 747-300 é de 900 km/h, 
@@ -122,7 +119,7 @@
     </div>
 
     <!-- Exercício 7 -->
-    <div class="ex7">
+    <div>
       <h2>Exercício 7</h2>
       <p>
         Um caminhão consegue transportar 18 toneladas de laranjas em uma viagem que faz entre a fazenda
@@ -140,7 +137,7 @@
     </div>
 
     <!-- Exercício 8 -->
-    <div class="ex8">
+    <div>
       <h2>Exercício 8</h2>
       <p>
         Desenvolva um programa que leia o raio (cm) e a altura (cm) de um cilindro.
@@ -159,7 +156,7 @@
     </div>
 
     <!-- Exercício 9 -->
-    <div class="ex9">
+    <div>
       <h2>Exercício 9</h2>
       <p>
         Desenvolva um programa que leia o nome e o preço de uma mercadoria. O programa deverá
@@ -177,7 +174,7 @@
     </div>
 
     <!-- Exercício 10 -->
-    <div class="ex10">
+    <div>
       <h2>Exercício 10</h2>
       <p>
         Desenvolva um programa que leia o nome de uma cidade, o número total de eleitores e o
