--- a/FPOO/Aula 18 - 17.10.2023/index.html
+++ b/FPOO/Aula 18 - 17.10.2023/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <header>
-      <h2>Cálculo Pagamento</h2>
+      <h2>CÁLCULO PAGAMENTO</h2>
 
       <div class="input">
         <input type="text" id="inputNome" placeholder="Nome do Colaborador" />
         <input type="number" id="inputSalario" placeholder="Salário" />
-        <button onclick="funcionario()">Enviar</button>
+        <button onclick="funcionario()">ENVIAR</button>
       </div>
     </header>
 
