--- a/FPOO/Aula 18 - 17.10.2023/correcao/index.html
+++ b/FPOO/Aula 18 - 17.10.2023/correcao/index.html
@@ -34,6 +34,7 @@
         <h4 class="salarioLiquido">1000</h4>
         <button class="remove" onclick="remover(this)">X</button>
         <button class="edit" onclick="editar()">Editar</button>
+        <div class="id"></div>
       </div>
     </div>
   </body>
