--- a/LIMA/Aula11/correcao/index.html
+++ b/LIMA/Aula11/correcao/index.html
@@ -34,7 +34,7 @@
         <h4 class="salarioLiquido">1000</h4>
         <button class="remove" onclick="remover(this)">X</button>
         <button class="edit" onclick="editar()">Editar</button>
-        <div class="id"></div>
+        <div class="id model"></div>
       </div>
     </div>
   </body>
