--- a/FPOO/Aula 18 - 17.10.2023/correcao/index.html
+++ b/FPOO/Aula 18 - 17.10.2023/correcao/index.html
@@ -32,8 +32,8 @@
         <h4 class="salarioValor"></h4>
         <h4 class="salarioBase">1000</h4>
         <h4 class="salarioLiquido">1000</h4>
-        <button class="remove" onclick="remover(this)">X</button>
-        <button class="edit" onclick="editar()">Editar</button>
+        <button class="remove" onclick="remover(this)"></button>
+        <button class="edit" onclick="editar(this)"></button>
         <div class="id"></div>
       </div>
     </div>
