--- a/LIMA/Aula11/correcao/index.html
+++ b/LIMA/Aula11/correcao/index.html
@@ -32,15 +32,9 @@
         <h4 class="salarioValor"></h4>
         <h4 class="salarioBase">1000</h4>
         <h4 class="salarioLiquido">1000</h4>
-<<<<<<< HEAD:FPOO/Aula 18 - 17.10.2023/correcao/index.html
-        <button class="remove" onclick="remover(this)"></button>
-        <button class="edit" onclick="editar(this)"></button>
+        <button class="remove" onclick="remover(this)">Excluir</button>
+        <button class="edit" onclick="editar(this)">Editar</button>
         <div class="id"></div>
-=======
-        <button class="remove" onclick="remover(this)">X</button>
-        <button class="edit" onclick="editar()">Editar</button>
-        <div class="id model"></div>
->>>>>>> cb3e42cdfdc3a256bc09cac8383290248e61b5c8:LIMA/Aula11/correcao/index.html
       </div>
     </div>
   </body>
