--- a/Portfólio/index.html
+++ b/Portfólio/index.html
@@ -26,7 +26,7 @@
 
         <div class="apresentacao">
             <p class="name">Hello, my names is Carlos <span>Rodrigues</span></p>
-            <p class="front"><span>Front-End</span> Developer</p>
+            <p class="front"><span>Full Stack</span> Developer</p>
         </div>
 
         <div class="foto_redes">
