--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -8,36 +8,72 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="./assets/img/logo1.png" alt="Logo" />
+      <div class="logotipo">
+        <img src="./assets/img/logo1.png" alt="Logotipo" />
       </div>
 
-      <nav class="nav">
+      <nav class="menus">
         <a href="#home"><p>HOME</p></a>
         <a href="#about"><p>ABOUT</p></a>
         <a href="#skills"><p>SKILLS</p></a>
         <a href="#projects"><p>PROJECTS</p></a>
-        <a href="#contact"><p>CONTACT</p></a>
       </nav>
     </header>
 
     <section class="home" id="home">
-      <div class="apresentacao">
-        <p class="name">Hello, my names is Carlos <span>Rodrigues</span></p>
-        <p class="front"><span>Full Stack</span> Developer</p>
+      <div class="divText">
+        <p class="text1">Hello, my names is Carlos <span>Rodrigues</span></p>
+        <p class="text2"><span>Systems Development</span> Student</p>
       </div>
 
-      <div class="foto_redes">
+      <div class="foto_Redes">
+
         <div class="foto"></div>
 
         <div class="redes">
           <a href=""><img src="./assets/img/github.png" alt="GitHub" /></a>
           <a href=""><img src="./assets/img/Linkedin.png" alt="LinkedIn" /></a>
-          <a href=""
-            ><img src="./assets/img/instagram.png" alt="Instagram"
-          /></a>
+          <a href=""><img src="./assets/img/instagram.png" alt="Instagram"/></a>
         </div>
+
       </div>
+    </section>
+
+    <section class="about" id="about">
+
+      <div class="sectionAbout">
+        <p>ABOUT <span>ME</span></p>
+      </div>
+
+      <div class="aboutMe">
+        <p>I'm 19 years old, currently i study systems development at SENAI school and this is the beginning of my career as a developer. 
+          This is my first portfolio, </p>
+      </div>
+
+    </section>
+
+    <section class="skills" id="skills">
+
+      <div class="sectionSkills">
+        <p>MY <span>SKILLS</span></p>
+      </div>
+
+      <div class="mySkills">
+
+      </div>
+    </section>
+
+    <section class="projects" id="projects">
+
+      <div class="sectionProjects">
+        <p>MY <span>PROJECTS</span></p>
+      </div>
+
+      <div class="myProjects">
+
+      </div>
+
+
     </section>
 
     <footer></footer>
