--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carlos Rodrigues</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="./assets/CSS/style.css" />
   </head>
   <body>
@@ -22,7 +22,7 @@
 
     <section class="home" id="home">
       <div class="divText">
-        <p class="text1">Hello, my names is Carlos <span>Rodrigues</span></p>
+        <p class="text1">Hello, i'm Carlos <span>Rodrigues</span></p>
         <p class="text2"><span>Systems Development</span> Student</p>
       </div>
 
@@ -31,9 +31,12 @@
         <div class="foto"></div>
 
         <div class="redes">
-          <a href=""><img src="./assets/img/github.png" alt="GitHub" /></a>
-          <a href=""><img src="./assets/img/Linkedin.png" alt="LinkedIn" /></a>
-          <a href=""><img src="./assets/img/instagram.png" alt="Instagram"/></a>
+          <a class="github" href="https://github.com/carlosaugustorodrigues">
+            <img src="./assets/img/github.png" alt="GitHub" /></a>
+          <a class="linkedin" href="">
+            <img src="./assets/img/Linkedin.png" alt="LinkedIn" /></a>
+          <a class="instagram" href="">
+            <img src="./assets/img/instagram.png" alt="Instagram"/></a>
         </div>
 
       </div>
@@ -46,8 +49,8 @@
       </div>
 
       <div class="aboutMe">
-        <p>I'm 19 years old, currently i study systems development at SENAI school and this is the beginning of my career as a developer. 
-          This is my first portfolio, </p>
+        <p>Hi, my names is Carlos, i'm 19 years old, currently i study systems development at SENAI school 
+          and this is the beginning of my career as a developer.</p>
       </div>
 
     </section>
