--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -27,56 +27,50 @@
       </div>
 
       <div class="foto_Redes">
-
         <div class="foto"></div>
 
         <div class="redes">
           <a class="github" href="https://github.com/carlosaugustorodrigues">
-            <img src="./assets/img/github.png" alt="GitHub" /></a>
+            <img src="./assets/img/github.png" alt="GitHub"
+          /></a>
           <a class="linkedin" href="">
-            <img src="./assets/img/Linkedin.png" alt="LinkedIn" /></a>
+            <img src="./assets/img/Linkedin.png" alt="LinkedIn"
+          /></a>
           <a class="instagram" href="">
-            <img src="./assets/img/instagram.png" alt="Instagram"/></a>
+            <img src="./assets/img/instagram.png" alt="Instagram"
+          /></a>
         </div>
-
       </div>
     </section>
 
     <section class="about" id="about">
-
       <div class="sectionAbout">
         <p>ABOUT <span>ME</span></p>
       </div>
 
       <div class="aboutMe">
-        <p>Hi, my names is Carlos, i'm 19 years old, currently i study systems development at SENAI school 
-          and this is the beginning of my career as a developer.</p>
+        <p>
+          Hi, my names is Carlos, i'm 19 years old, currently i study systems
+          development at SENAI school and this is the beginning of my career as
+          a developer.
+        </p>
       </div>
-
     </section>
 
     <section class="skills" id="skills">
-
       <div class="sectionSkills">
         <p>MY <span>SKILLS</span></p>
       </div>
 
-      <div class="mySkills">
-
-      </div>
+      <div class="mySkills"></div>
     </section>
 
     <section class="projects" id="projects">
-
       <div class="sectionProjects">
         <p>MY <span>PROJECTS</span></p>
       </div>
 
-      <div class="myProjects">
-
-      </div>
-
-
+      <div class="myProjects"></div>
     </section>
 
     <footer></footer>
