--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -36,9 +36,9 @@
           <a class="linkedin" href="">
             <img src="./assets/img/Linkedin.png" alt="LinkedIn"
           /></a>
-          <a class="instagram" href="">
+          <!-- <a class="instagram" href="">
             <img src="./assets/img/instagram.png" alt="Instagram"
-          /></a>
+          /></a> -->
         </div>
       </div>
     </section>
