--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -13,7 +13,7 @@
       </div>
 
       <nav id="menu" class="menu">
-        <a class="item-menu active" href="#home"><p>HOME</p></a>
+        <a class="item-menu" href="#home"><p>HOME</p></a>
         <a class="item-menu" href="#about"><p>ABOUT</p></a>
         <!-- <a href="#skills"><p>SKILLS</p></a> -->
         <a class="item-menu" href="#projects"><p>PROJECTS</p></a>
@@ -73,7 +73,11 @@
         <p>MY <span>PROJECTS</span></p>
       </div>
 
-      <div class="myProjects"></div>
+      <div class="myProjects">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </section>
 
     <footer></footer>
