--- a/LIMA/Aula05/panda.html
+++ b/LIMA/Aula05/panda.html
@@ -4,49 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quebra-Cabeça</title>
-    <link rel="stylesheet" href="/assets/CSS/style.css">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 <body>
     
     <h1 class="titulo">Quebra-Cabeça</h1>
-    <center><img class="panda" src="/assets/img/panda.jpg"/></center>
+    <center><img class="panda" src="./assets/img/panda.jpg"/></center>
 
     <center>
     <table border="1">
             <tr>
-                <td><img src="/assets/img/img13.png"></td>
-                <td><img src="/assets/img/img10.png"></td>
-                <td><img src="/assets/img/img6.png"></td>
-                <td><img src="/assets/img/img5.png"></td>
-                <td><img src="/assets/img/img17.png"></td>
+                <td><img src="./assets/img/img13.png"></td>
+                <td><img src="./assets/img/img10.png"></td>
+                <td><img src="./assets/img/img6.png"></td>
+                <td><img src="./assets/img/img5.png"></td>
+                <td><img src="./assets/img/img17.png"></td>
             </tr>
             <tr>
-                <td><img src="/assets/img/img14.png"></td>
-                <td><img src="/assets/img/img4.png"></td>
-                <td><img src="/assets/img/img8.png"></td>
-                <td><img src="/assets/img/img2.png"></td>
-                <td><img src="/assets/img/img1.png"></td>
+                <td><img src="./assets/img/img14.png"></td>
+                <td><img src="./assets/img/img4.png"></td>
+                <td><img src="./assets/img/img8.png"></td>
+                <td><img src="./assets/img/img2.png"></td>
+                <td><img src="./assets/img/img1.png"></td>
             </tr>
             <tr>
-                <td><img src="/assets/img/img15.png"></td>
-                <td><img src="/assets/img/img20.png"></td>
-                <td><img src="/assets/img/img21.png"></td>
-                <td><img src="/assets/img/img7.png"></td>
-                <td><img src="/assets/img/img9.png"></td>
+                <td><img src="./assets/img/img15.png"></td>
+                <td><img src="./assets/img/img20.png"></td>
+                <td><img src="./assets/img/img21.png"></td>
+                <td><img src="./assets/img/img7.png"></td>
+                <td><img src="./assets/img/img9.png"></td>
             </tr>
             <tr>
-                <td><img src="/assets/img/img24.png"></td>
-                <td><img src="/assets/img/img23.png"></td>
-                <td><img src="/assets/img/img12.png"></td>
-                <td><img src="/assets/img/img18.png"></td>
-                <td><img src="/assets/img/img3.png"></td>
+                <td><img src="./assets/img/img24.png"></td>
+                <td><img src="./assets/img/img23.png"></td>
+                <td><img src="./assets/img/img12.png"></td>
+                <td><img src="./assets/img/img18.png"></td>
+                <td><img src="./assets/img/img3.png"></td>
             </tr>
             <tr>
-                <td><img src="/assets/img/img19.png"></td>
-                <td><img src="/assets/img/img25.png"></td>
-                <td><img src="/assets/img/img22.png"></td>
-                <td><img src="/assets/img/img16.png"></td>
-                <td><img src="/assets/img/img11.png"></td>
+                <td><img src="./assets/img/img19.png"></td>
+                <td><img src="./assets/img/img25.png"></td>
+                <td><img src="./assets/img/img22.png"></td>
+                <td><img src="./assets/img/img16.png"></td>
+                <td><img src="./assets/img/img11.png"></td>
             </tr>
     </table>
     </center>
