--- a/LIMA/Aula05/tempoclima.html
+++ b/LIMA/Aula05/tempoclima.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tempo Clima</title>
-    <link rel="stylesheet" href="/assets2/CSS/style.css">
+    <link rel="stylesheet" href="./assets2/CSS/style.css">
 </head>
 <body>
 
